www/css/style_additions_new.css
/* ... */
.linking_from_campaign, .linking_from_group, .leaving_from_campaign,
.linked_to_where_campaign, .linked_to_where_group {
    
}
.linking_from_problem, .linking_from_challenge,
.linked_to_where_problem, .linked_to_where_challenge {
    border-left: 5px solid #D21034;
}
.linking_from_finfo, .linking_from_visions,
.linked_to_where_finfo, .linked_to_where_visions {
    border-left: 5px solid #FFC726;
}
.linking_from_idea, .linking_from_ideas,
.linked_to_where_idea, .linked_to_where_ideas {
    border-left: 5px solid #4B9B07;
}
.linking_from_text, leaving_from_text {
    margin: 4px 0 4px 20px;
}
.linking_from_link {
    margin-top: 4px;
}

li.linked_campaigns, li.linked_groups {
    list-style-type: none;
    margin-top: 4px;
}

#leave_confirm {
    width: 500px;
    float: left;
    margin-bottom: 10px;
}
#leave_confirm_groups {

}

#group_waiting_list {
    float: left;
	width: 500px;
    margin-bottom: 10px;
}
.group_waiting_list_table {
    width: 500px;
    margin-top: 10px;
    border-spacing: 0;
}
.group_waiting_list_user_accept, .group_waiting_list_user_deny, .group_waiting_list_user_ignore,
.group_waiting_list_user_img, .group_waiting_list_user_name {
    padding: 4px;
    border-top: 1px black dotted;
}
.group_waiting_list_user_accept_all, .group_waiting_list_user_deny_all {
    padding: 4px;
}
.group_waiting_list_user_accept {
    width: 80px;
}
.group_waiting_list_user_deny {
    width: 80px;
}
.group_waiting_list_user_ignore {
    width: 80px;
}
.group_waiting_list_user_img {
    width: 50px;
}
.group_waiting_list_user_name {
    width: 210px;
}

#commentTextarea {
	width: 498px;
	margin-top: 10px;
}

#content_view_comments_header {
	margin:1em 0;
}

.content_view_comment_header {
	height: 2em;
	background:#CCCCCC none repeat scroll 0 0;
}

.content_view_comment_username, .content_view_comment_date {
	float:left;
	margin:0.3em;
}

.content_view_comment_username {
	color:#0089CF;
	font-weight:bold;
}

.content_view_comment_reply {
	float:right;
	font-weight:bold;
	margin:0.3em 1em;
}
.content_view_comment_container_0 {
    margin: 0 0 1em 0;
}

.content_view_comment_container_1 {
    margin: 0 0 1em 2em;
}

.content_view_comment_container_2 {
    margin: 0 0 1em 4em;
}

.content_view_comment_container_3 {
    margin: 0 0 1em 6em;
}

.content_view_comment {
	margin:0.3em 0 0 1em;
}

#content_view_comment_form_container {
	margin:1em 0 0;
}

a#cancel_reply_link {
	padding: 0;
	float: right;
	margin: 0;	
}
p#replying_to {
	padding: 0 20px 0 0;
	margin: 0;
	float: right;
}

.content_view_comment_container_1 .content_view_comment_header, .content_view_comment_container_2 .content_view_comment_header, .content_view_comment_container_3 .content_view_comment_header {
	background:#EEEEEE none repeat scroll 0 0;
}

.content_view_comment_header {
	background:#CCCCCC none repeat scroll 0 0;
	height:2em;
}

.rss-reader {
	border: 1px solid #CCCCCC;
}

.rss-reader ul {
	margin: 5px !important;
}

.rss-item {
	border-bottom: 1px dotted #CCCCCC;	
}

#rss-list-feeds #feeds {
	width: 450px;	
}
#rss-input-feed-url {
	width: 405px;	
}

#rss {
	border-top: 1px dotted #CCCCCC;	
}

.campaign_list_paragraph {
    font-size: 12px;
    color: #C0C0C0;
}
.campaign_list_paragraph strong {
    font-size: 14px;
}

#user-page #activity DIV#content_type {
	margin-bottom: -3px;
}

.first_tag { color: #003581; }
.second_tag { }

.user_content_edit ul { border: 1px solid #999; list-style:none outside none; position: absolute; display: none; width: 160px; background: none repeat scroll 0 0 #EEEEEE; text-align: left; font-size: 11px; font-weight: bold; z-index: 9999; margin: 0px; padding: 0px; }
.user_content_edit ul li { border: 2px outset #CCC; padding: 2px; } 
.user_content_edit ul li img { vertical-align: middle; }
.user_content_edit ul li:hover { background: #0089CF; }
.user_content_edit ul li a:hover { color: #333 !important }
.user_content_edit ul li a { color: #333333 !important; padding-left: 2px; text-decoration: none;}

/* more from boxi */
#content_view_user_related_container, 
#content_view_related_content_container {
	margin: 0 0 1em 0;
}
#content_view_user_related, 
#content_view_content_related {
	background:#ffffff none repeat scroll 0 0;
    border:1px solid #CCCCCC;
	padding: 0.5em 0.5em;
	font-size: 10pt;
}

#content_view_user_related, #content_view_content_related {
	max-height: 200px;
	overflow: auto;
}

.content_view_user_related_entry_idea, 
.content_view_user_related_entry_problem,
.content_view_user_related_entry_futureinfo, 
.content_view_user_related_entry_finfo, 
.content_view_content_related_entry_idea, 
.content_view_content_related_entry_problem,
.content_view_content_related_entry_futureinfo, 
.content_view_content_related_entry_finfo {
	padding: 0 0 0 5px;
	margin-top: 3px;
    margin-bottom: 2px;
	min-height: 10px;
    clear: both;
    font-size: 80%;
}

.content_view_user_related_entry_idea, .content_view_content_related_entry_idea {
	border-left: 0.5em solid #4b9b07;
}

.content_view_user_related_entry_problem, .content_view_content_related_entry_problem {
	border-left: 0.5em solid #d21034;
}

.content_view_user_related_entry_finfo, .content_view_content_related_entry_finfo {
	border-left: 0.5em solid #ffc726;
}

#content_view_user_related_header,  #content_view_related_content_header {
	height: 20px;
	padding: 0.3em 1em 0 1em;
	font-weight: bold;
	font-size: 14px;
}

.content_rating_positive {
	padding-right: 2px;
	color: green;
	font-weight:bold;
	display:inline;
}

.content_rating_negative {
	padding-right: 2px;
	color: red;
	font-weight:bold;
	display:inline;
}

#content_view_content_rating_total {
	padding-right: 2px;
	display:inline;
}

#content_view_content_rating {
	padding: 1px;
}

.content_view_content_vote {
	padding-right: 2px;
	display:inline-block;
	vertical-align: middle;
}

a#cancel_reply_link {
	padding: 10px;
	float: right;
	margin: 0;	
}
p#replying_to {
	padding: 10px 20px 0 0;
	margin: 0;
	float: right;
}
/* ... */

